# zstd-rs

./: Cargo.toml
src/: frame.rs  frame_decoder.rs  lib.rs  streaming_decoder.rs
src/blocks/: block.rs  literals_section.rs  sequence_section.rs
src/decoding/: bit_reader.rs  bit_reader_reverse.rs  block_decoder.rs  decodebuffer.rs  dictionary.rs  literals_section_decoder.rs  scratch.rs  sequence_execution.rs  sequence_section_decoder.rs
src/errors/: mod.rs
src/fse/: fse_decoder.rs
src/huff0/: huff0_decoder.rs
src/tests/: decode_corpus.rs  dict_test.rs  mod.rs
