[package]
name = "ruzstd"
version = "0.2.2"
authors = ["Moritz Borcherding <moritz.borcherding@web.de>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/KillingSpark/zstd-rs"
repository = "https://github.com/KillingSpark/zstd-rs"
description = "A decoder for the zstd compression format"
exclude = ["decodecorpus_files/*", "dict_tests/*", "fuzz_decodecorpus/*"]
readme = "Readme.md"

[dependencies]
byteorder = { version = "1.4.2", default-features = false }
twox-hash = { version = "1.6.0", default-features = false }
hashbrown = { version = "0.9.1", default-features = false, features = ["nightly", "inline-more", "ahash"], optional = true }

[dev-dependencies]
criterion = "0.3"
rand = "0.7.3"

[features]
default = ["std"]
std = []
alloc = ["hashbrown"]

[[bench]]
name = "reversedbitreader_bench"
harness = false
